feat: (try to) configure docker to run on ecs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     depends_on:
       - mysqldb
     build: ./backend
+    image: ptrkstrk/tictactoe-backend
     restart: unless-stopped
     env_file: ./.env
     ports:
@@ -41,6 +42,7 @@ services:
       context: ./frontend
       args:
         - REACT_APP_API_BASE_URL=$CLIENT_API_BASE_URL
+    image: ptrkstrk/tictactoe-frontend
     ports:
       - $REACT_LOCAL_PORT:$REACT_DOCKER_PORT
     networks:
