--- a/.env
+++ b/.env
@@ -1,14 +1,2 @@
-MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=123456
-MYSQLDB_DATABASE=mysqldb
-MYSQLDB_LOCAL_PORT=3306
-MYSQLDB_DOCKER_PORT=3306
-
-NODE_LOCAL_PORT=6379
-NODE_DOCKER_PORT=6379
-
-CLIENT_ORIGIN=http://127.0.0.1:8888
-CLIENT_API_BASE_URL=http://127.0.0.1:6868
-
-REACT_LOCAL_PORT=8080
-REACT_DOCKER_PORT=8080
+API_PORT=8080
+SOCKET_PORT=8081
